@@ -1,5 +1,13 @@
 2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* s/usg5-4.h (HAVE_SYSVIPC): Remove, unused.
+	(USG_SHARED_LIBRARIES): Remove, only used in unexec.c which is not
+	used by this configuration.
+	* emacs.c: Remove code depending on USG_SHARED_LIBRARIES.
+	* unexec.c: Remove code depending on HPUX and
+	USG_SHARED_LIBRARIES, not used with this file.  Remove code
+	depending on IRIS, unused.  Remove if 0-ed code.
+
 	* s/template.h: Remove comments about static.
 
 	* sysdep.c: Remove code depending on NEED_PTEM_H, unused.  Remove
